Fixed overflow in section text page 1

--- a/styles.css
+++ b/styles.css
@@ -577,6 +577,7 @@
   }
   .text-col{
     text-align: justify;
+    overflow: hidden;
   }
   .section-text{
     font-size: .7em;
